[package]
name = "dy"
version = "1.0.0"
authors = ["Chanjung Kim <freiyer.paxbun@gmail.com>"]
edition = "2018"
description = "C-compatible JSON-like type library for Rust"
repository = "https://github.com/stelo-stella/dy-rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
import = ["libloading"]

[dependencies]
libloading = { version = "0.5", optional = true }

[build-dependencies]
cmake = "0.1"
bindgen = "0.53.1"