[package]
name = "import_test"
version = "1.0.0"
authors = ["Chanjung Kim <freiyer.paxbun@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
dy = { git = "https://github.com/stelo-stella/dy-rust" }
dy-export = { git = "https://github.com/stelo-stella/dy-export" }